PyQuest/src/test/parsing/invalid/test020.ql
form label {
    if (0 - 0) {
        "Question?"
        id : boolean
    }
}